objects/amc__Agenda_Task__c.object
<CustomObject>
    <description>The Agenda Task Object is used to identify the tasks assigned to Attendees within a Meeting.</description>
    <fields>
        <fullName>amc__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action</label>
        <referenceTo>amc__Action__c</referenceTo>
        <relationshipLabel>Agenda Task</relationshipLabel>
        <relationshipName>Agenda_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Add_to_Next_Meeting__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this field if this Agenda Task should be included in the next Meeting within this Meeting Manager</inlineHelpText>
        <label>Add to Next Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Added_to_Next_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies that this Agenda Task has been added to the Next Meeting</inlineHelpText>
        <label>Added to Next Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Agenda_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Agenda Item this Agenda Task relates to</inlineHelpText>
        <label>Agenda Item</label>
        <referenceTo>amc__Agenda_Item__c</referenceTo>
        <relationshipLabel>Agenda Tasks</relationshipLabel>
        <relationshipName>Agenda_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if the Agenda Task was resolved within this meeting</inlineHelpText>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Task_Comments__c</fullName>
        <inlineHelpText>Identifies the details of the Agenda Task</inlineHelpText>
        <label>Task Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Task_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Role record of the person assigned to this Agenda Task</inlineHelpText>
        <label>Task Owner</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Agenda Task</relationshipLabel>
        <relationshipName>Agenda_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Agenda Task</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Task_Owner__c</columns>
        <columns>amc__Task_Comments__c</columns>
        <columns>amc__Resolved__c</columns>
        <columns>amc__Add_to_Next_Meeting__c</columns>
        <columns>amc__Agenda_Item__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agenda Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda Task</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>amc__Prevent_Resolved_and_ATNM_Being_True</fullName>
        <active>true</active>
        <description>Ensures Resolved and Add to Next Meeting cannot both be true</description>
        <errorConditionFormula>AND(amc__Add_to_Next_Meeting__c,amc__Resolved__c)</errorConditionFormula>
        <errorMessage>You cannot set Resolved and Add to Next Meeting as true</errorMessage>
    </validationRules>
</CustomObject>